Updated project folder with latest changes

--- a/notebooks/13_feature_pipeline.ipynb
+++ b/notebooks/13_feature_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "4aba119e-8624-4c30-ad3c-49759f3f18d4",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "id": "d70f3626-766c-430f-97d9-ee5c9068c240",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-04 06:16:28.254022\n"
+      "2025-03-04 16:43:26.771324\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "98019378-2d7e-44d9-b6a3-794e640b2910",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "pandas._libs.tslibs.timestamps.Timestamp"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "id": "8dfe29a0-f439-4e3b-8ad2-78eb40a3bde3",
    "metadata": {},
    "outputs": [],
@@ -72,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "id": "e1ceac31-828d-4ca3-9ae3-19a0f4ec2ab8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.datetime64('2025-03-04T06:00:00.000000000')"
+       "numpy.datetime64('2025-03-04T16:00:00.000000000')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "id": "0a9eb28f-e6ea-44e6-aa60-05d8304691fc",
    "metadata": {},
    "outputs": [],
@@ -104,17 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "133fcfda-af02-43f0-8851-63ef10b778ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2025-03-04 06:00:00+0000', tz='UTC')"
+       "Timestamp('2025-03-04 16:00:00+0000', tz='UTC')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,17 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "id": "ec2f9e79-58b1-4e18-9346-c93fc04e1f7c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2025-02-03 06:00:00+0000', tz='UTC')"
+       "Timestamp('2025-02-03 16:00:00+0000', tz='UTC')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "id": "dfaf545c-01d6-41dc-871d-c514c667bbce",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "id": "4e1669d5-cc0b-440b-8e8d-8bb78d16c58c",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "id": "22176c04-e64c-496a-9acd-6a6eb7bc2ff0",
    "metadata": {},
    "outputs": [
@@ -279,28 +279,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>893170</th>\n",
+       "      <th>849634</th>\n",
        "      <td>2025-02-12 16:25:44</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1199871</th>\n",
+       "      <th>1156335</th>\n",
        "      <td>2025-02-15 16:56:40</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13325</th>\n",
-       "      <td>2025-02-03 09:11:09</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27460</th>\n",
-       "      <td>2025-02-03 12:14:43</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61882</th>\n",
+       "      <th>18346</th>\n",
        "      <td>2025-02-03 18:07:44</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40050</th>\n",
+       "      <td>2025-02-04 04:14:50</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41651</th>\n",
+       "      <td>2025-02-04 06:08:40</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -309,53 +309,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2932155</th>\n",
-       "      <td>2025-03-04 05:50:32</td>\n",
+       "      <th>2934367</th>\n",
+       "      <td>2025-03-04 15:58:54</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2971323</th>\n",
-       "      <td>2025-03-04 05:53:18</td>\n",
+       "      <th>2936360</th>\n",
+       "      <td>2025-03-04 15:59:06</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2971349</th>\n",
-       "      <td>2025-03-04 05:56:00</td>\n",
+       "      <th>2940026</th>\n",
+       "      <td>2025-03-04 15:59:13</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2932146</th>\n",
-       "      <td>2025-03-04 05:58:34</td>\n",
+       "      <th>2983807</th>\n",
+       "      <td>2025-03-04 15:59:19</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2932353</th>\n",
-       "      <td>2025-03-04 05:58:51</td>\n",
+       "      <th>2939057</th>\n",
+       "      <td>2025-03-04 15:59:58</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2971372 rows × 2 columns</p>\n",
+       "<p>2984127 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            pickup_datetime  pickup_location_id\n",
-       "893170  2025-02-12 16:25:44                   2\n",
-       "1199871 2025-02-15 16:56:40                   2\n",
-       "13325   2025-02-03 09:11:09                   3\n",
-       "27460   2025-02-03 12:14:43                   3\n",
-       "61882   2025-02-03 18:07:44                   3\n",
+       "849634  2025-02-12 16:25:44                   2\n",
+       "1156335 2025-02-15 16:56:40                   2\n",
+       "18346   2025-02-03 18:07:44                   3\n",
+       "40050   2025-02-04 04:14:50                   3\n",
+       "41651   2025-02-04 06:08:40                   3\n",
        "...                     ...                 ...\n",
-       "2932155 2025-03-04 05:50:32                 263\n",
-       "2971323 2025-03-04 05:53:18                 263\n",
-       "2971349 2025-03-04 05:56:00                 263\n",
-       "2932146 2025-03-04 05:58:34                 263\n",
-       "2932353 2025-03-04 05:58:51                 263\n",
+       "2934367 2025-03-04 15:58:54                 263\n",
+       "2936360 2025-03-04 15:59:06                 263\n",
+       "2940026 2025-03-04 15:59:13                 263\n",
+       "2983807 2025-03-04 15:59:19                 263\n",
+       "2939057 2025-03-04 15:59:58                 263\n",
        "\n",
-       "[2971372 rows x 2 columns]"
+       "[2984127 rows x 2 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "id": "783eebf6-7c7d-4ef8-9134-a92c87123146",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "id": "adbca6ba-f012-4f40-b419-ed620a8e7054",
    "metadata": {},
    "outputs": [
@@ -410,31 +410,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2025-02-03 06:00:00</td>\n",
+       "      <td>2025-02-03 16:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2025-02-03 07:00:00</td>\n",
+       "      <td>2025-02-03 17:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2025-02-03 08:00:00</td>\n",
+       "      <td>2025-02-03 18:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2025-02-03 09:00:00</td>\n",
+       "      <td>2025-02-03 19:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2025-02-03 10:00:00</td>\n",
+       "      <td>2025-02-03 20:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -446,33 +446,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>174691</th>\n",
-       "      <td>2025-03-04 01:00:00</td>\n",
+       "      <td>2025-03-04 11:00:00</td>\n",
        "      <td>263</td>\n",
-       "      <td>6</td>\n",
+       "      <td>98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>174692</th>\n",
-       "      <td>2025-03-04 02:00:00</td>\n",
+       "      <td>2025-03-04 12:00:00</td>\n",
        "      <td>263</td>\n",
-       "      <td>6</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>174693</th>\n",
-       "      <td>2025-03-04 03:00:00</td>\n",
+       "      <td>2025-03-04 13:00:00</td>\n",
        "      <td>263</td>\n",
-       "      <td>3</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>174694</th>\n",
-       "      <td>2025-03-04 04:00:00</td>\n",
+       "      <td>2025-03-04 14:00:00</td>\n",
        "      <td>263</td>\n",
-       "      <td>8</td>\n",
+       "      <td>146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>174695</th>\n",
-       "      <td>2025-03-04 05:00:00</td>\n",
+       "      <td>2025-03-04 15:00:00</td>\n",
        "      <td>263</td>\n",
-       "      <td>18</td>\n",
+       "      <td>126</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -481,22 +481,22 @@
       ],
       "text/plain": [
        "               pickup_hour  pickup_location_id  rides\n",
-       "0      2025-02-03 06:00:00                   2      0\n",
-       "1      2025-02-03 07:00:00                   2      0\n",
-       "2      2025-02-03 08:00:00                   2      0\n",
-       "3      2025-02-03 09:00:00                   2      0\n",
-       "4      2025-02-03 10:00:00                   2      0\n",
+       "0      2025-02-03 16:00:00                   2      0\n",
+       "1      2025-02-03 17:00:00                   2      0\n",
+       "2      2025-02-03 18:00:00                   2      0\n",
+       "3      2025-02-03 19:00:00                   2      0\n",
+       "4      2025-02-03 20:00:00                   2      0\n",
        "...                    ...                 ...    ...\n",
-       "174691 2025-03-04 01:00:00                 263      6\n",
-       "174692 2025-03-04 02:00:00                 263      6\n",
-       "174693 2025-03-04 03:00:00                 263      3\n",
-       "174694 2025-03-04 04:00:00                 263      8\n",
-       "174695 2025-03-04 05:00:00                 263     18\n",
+       "174691 2025-03-04 11:00:00                 263     98\n",
+       "174692 2025-03-04 12:00:00                 263    100\n",
+       "174693 2025-03-04 13:00:00                 263    100\n",
+       "174694 2025-03-04 14:00:00                 263    146\n",
+       "174695 2025-03-04 15:00:00                 263    126\n",
        "\n",
        "[174696 rows x 3 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "0b8f1dc6-46d6-4fad-915b-c8c4c02b9887",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "id": "0c2d5acd-0f97-4117-b61d-6135391891db",
    "metadata": {},
    "outputs": [
@@ -542,11 +542,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-04 01:16:30,484 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-03-04 11:43:29,028 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-03-04 01:16:30,486 INFO: Initializing external client\n",
-      "2025-03-04 01:16:30,486 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-04 01:16:31,249 INFO: Python Engine initialized.\n",
+      "2025-03-04 11:43:29,032 INFO: Initializing external client\n",
+      "2025-03-04 11:43:29,032 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-04 11:43:29,788 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1215680\n"
      ]
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "id": "b3093058-9e94-4b49-9ad9-32dace742a31",
    "metadata": {},
    "outputs": [
@@ -582,16 +582,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |████████████████████████████████████| Rows 174696/174696 | Elapsed Time: 00:10 | Remaining Time: 00:00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Launching job: time_series_hourly_feature_group_1_offline_fg_materialization\n",
-      "Job started successfully, you can follow the progress at \n",
-      "https://c.app.hopsworks.ai:443/p/1215680/jobs/named/time_series_hourly_feature_group_1_offline_fg_materialization/executions\n"
+      "Uploading Dataframe: 100.00% |████████████████████████████████████| Rows 174696/174696 | Elapsed Time: 00:09 | Remaining Time: 00:00\n",
+      "UserWarning: Materialization job is already running, aborting new execution.Please wait for the current execution to finish before triggering a new one.You can check the status of the current execution using `fg.materialization_job.get_state()`.or `fg.materialization_job.get_final_state()` or check it out in the Hopsworks UI.at https://c.app.hopsworks.ai:443/p/1215680/jobs/named/time_series_hourly_feature_group_1_offline_fg_materialization.\n",
+      "Use fg.materialization_job.run(args=-op offline_fg_materialization -path hdfs:///Projects/NYCTAXI_SP25/Resources/jobs/time_series_hourly_feature_group_1_offline_fg_materialization/config_1741068137303) to trigger the materialization job again.\n"
      ]
     },
     {
@@ -601,7 +594,7 @@
        " None)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
